fix: add result meaning

--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ nav .nav-button {
   text-align: center;
 }
 
-.App-header {
+.App-body {
   background-color: #282c347e;
   min-height: 60vh;
   display: flex;
